exports[`(.not).toHaveOkStatus > using axios > .not.toHaveOkStatus > fails when response have status code 200 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveOkStatus()</intensity>

Expected status code to not be 200 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveOkStatus > using axios > .toHaveOkStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveOkStatus()</intensity>

Expected status code to be 200 received:
  <red>400</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 400,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveOkStatus > using got > .not.toHaveOkStatus > fails when response have status code 200 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveOkStatus()</intensity>

Expected status code to not be 200 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveOkStatus > using got > .toHaveOkStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveOkStatus()</intensity>

Expected status code to be 200 received:
  <red>400</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 400,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
